--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h1 class="bounding" id="secondh1">Designer</h1>
                     </div>
                     <div class="bounding">
-                        <h5 class="boundingelem">Based in torronto</h5>
+                        <h5 class="boundingelem">Based in toronto</h5>
                     </div>
                 </div>
             </div>
