--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
                     </div>
                 </div>
             </div>
+            <div id="chhotiheadings">
+                <div class="bounding">
+                    <h5 class="boundingelem">available for freelance</h5>
+                </div>
+                <div class="bounding">
+                    <h5 class="boundingelem">work from may 23'</h5>
+                </div>
+            </div>
+            <div id="herofooter">
+                <a href="#">previously worked at yml <i class="ri-arrow-right-up-line"></i></a>
+                <a href="#">protopie ambassador <i class="ri-arrow-right-up-line"></i></a>
+                <div id="iconset">
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                </div>
+            </div>
         </div>       
     </div>
  
