--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loco.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="minicircle"></div>
@@ -18,11 +20,11 @@
             </div>
             <div id="heading">
                 <div class="bounding">
-                    <h1 id="boundingelem">Product</h1>
+                    <h1 class="boundingelem">Product</h1>
                 </div>
                 <div class="blocktext">
                     <div class="bounding">
-                        <h1 class="bounding" id="secondh1">Designer</h1>
+                        <h1 class="boundingelem" id="secondh1">Designer</h1>
                     </div>
                     <div class="bounding">
                         <h5 class="boundingelem">Based in toronto</h5>
@@ -45,7 +47,7 @@
                     <div class="circle"><i class="ri-arrow-down-line"></i></div>
                 </div>
             </div>
-        </div>
+        </div> 
         <div id="second">
             <div class="elem">
                 <img src="./plug.png" alt="">
@@ -62,7 +64,7 @@
                 <h1>hudu</h1>
                 <h5>2022</h5>
             </div>
-        </div> 
+        </div>
         <div id="about">
             <img src="https://cynthiaugwu.com/images/cynthia.png" alt="">
             <div id="textabout">
@@ -89,6 +91,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
